@@ -47,7 +47,7 @@ class Array<T> implements ArrayAccess<Int,T> {
 	}
 
 	public function indexOf(x:T, ?fromIndex:Int):Int {
-		if (fromIndex == null) {
+		if (fromIndex == null && !Boot.isHxClosure(x) && !Boot.isNumber(x)) {
 			var index = Global.array_search(x, arr, true);
 			if (index == false) {
 				return -1;
@@ -55,8 +55,12 @@ class Array<T> implements ArrayAccess<Int,T> {
 				return index;
 			}
 		}
-		if (fromIndex < 0) fromIndex += length;
-		if (fromIndex < 0) fromIndex = 0;
+		if (fromIndex == null) {
+			fromIndex = 0;
+		} else {
+			if (fromIndex < 0) fromIndex += length;
+			if (fromIndex < 0) fromIndex = 0;
+		}
 		while (fromIndex < length) {
 			if (arr[fromIndex] == x)
 				return fromIndex;
